--- a/src/components/Post/Content/Content.module.scss
+++ b/src/components/Post/Content/Content.module.scss
@@ -18,6 +18,17 @@
     @include margin-bottom(0)
   }
 
+  &__subtitle{
+    font-size: $typographic-base-font-size *1.4;
+    max-width: $layout-post-width;
+    margin-left: auto;
+    margin-right: auto;
+    font-weight: 400;
+    text-align: center;
+    @include margin-bottom(0)
+    color: #D3D3D3;
+  }
+
   &__body {
     & figure {
       @include margin-bottom(1);
