--- a/src/components/Post/Content/Content.module.scss
+++ b/src/components/Post/Content/Content.module.scss
@@ -12,10 +12,10 @@
     margin-left: auto;
     margin-right: auto;
     font-weight: 600;
-    text-align: center;
+    text-align: left;
     @include line-height(1.65);
     @include margin-top(1);
-    @include margin-bottom(0)
+    @include margin-bottom(-1)
   }
   
   &__body {
@@ -32,7 +32,7 @@
           max-width: $layout-post-width;
           font-size: $typographic-base-font-size * 1.6817;
           margin-top: 0;
-          @include margin-bottom(1);
+          @include margin-bottom(0);
           @include line-height(1.5)
         }
 
@@ -63,19 +63,19 @@
     padding: 0;
 
     &__title {
-      font-size: $typographic-base-font-size * 3;
+      font-size: $typographic-base-font-size * 2.75;
       @include line-height(2.25);
-      @include margin-top(2.25);
-      @include margin-bottom(1.5)
+      @include margin-top(1.5);
+      @include margin-bottom(-0.4)
     }
 
     &__body {
-      font-size: $typographic-base-font-size * 1.125;
+      font-size: $typographic-base-font-size * 1.05;
       @include line-height(1.125);
       @include margin-bottom(1.125);
 
       & p {
-        font-size: $typographic-base-font-size * 1.125;
+        font-size: $typographic-base-font-size * 1.05;
         @include line-height(1.125);
         @include margin-bottom(1.125)
       }
