--- a/src/components/Sidebar/Author/Author.module.scss
+++ b/src/components/Sidebar/Author/Author.module.scss
@@ -4,6 +4,7 @@
 .author {
   &__photo {
     display: inline-block;
+    margin-top: 35px;
     margin-bottom: 0;
     border-radius: 50%;
     background-clip: padding-box
