--- a/src/components/Post/Author/Author.module.scss
+++ b/src/components/Post/Author/Author.module.scss
@@ -3,8 +3,10 @@
 
 .author {
   border-top: 1px solid $color-gray-border;
+  border-bottom: 1px solid $color-gray-border;
   max-width: $layout-post-width;
   padding-top: 20px;
+  padding-bottom: 17px;
   @include line-height(1);
   @include margin-top(1);
   @include margin-bottom(2);
@@ -12,8 +14,15 @@
   &__bio {
     &-twitter {
       display: block;
-      text-decoration: underline;
     }
+  }
+
+  &__photo {
+    width: 100px;
+    height: 100px;
+    margin-top: -9px;
+    margin-bottom: 10px;
+    margin-right: 20px;
   }
 }
 
